make text white, fix splash on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -31,6 +31,7 @@ body {
 }
 
 #landing-cta {
+  color: white;
   text-align: center;
 }
 
